app/scss/styles.scss
*, *::before, *::after {
    box-sizing: border-box;
}

body {
    margin: 0;
    background-color: #fff;
    font-family: Arial, Helvetica, sans-serif;

    .row {
        height: 100vh;
        overflow: hidden;
        display: flex;
        flex-direction: row;

        @media only screen and (max-width: 992px) {
            height: auto;
            flex-direction: column;
        }

        .column {
            flex: 0 0 50%;
            max-width: 50%;

            @media only screen and (max-width: 992px) {
                flex: 0 0 100%;
                max-width: 100%;
            }

            &--scroll {
                overflow: scroll;
            }
        }
    }

    .introduction {
        height: 100%;
        padding: 50px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        background-image: url('../images/background.jpg');
        background-position: center;
        background-size: cover;
        background-repeat: no-repeat;

        @media only screen and (max-width: 768px) {
            padding: 25px;
        }

        .logo {
            color: #fff;
            font-weight: bold;
            font-size: 24px;

            @media only screen and (max-width: 768px) {
                font-size: 20px;
            }
        }
    
        .page-title {
            max-width: 500px;
            font-size: 72px;
            margin: 1.5em 0;
            font-weight: bold;
            color: #fff;

            @media only screen and (max-width: 1200px) {
                font-size: 50px;
            }

            @media only screen and (max-width: 992px) {
                margin: 1.5em auto;
                text-align: center;
            }

            @media only screen and (max-width: 768px) {
                font-size: 40px;
            }
        }

        .page-subtitle {
            position: relative;
            max-width: 300px;
            font-size: 24px;
            font-weight: bold;
            color: #fff;
            white-space: normal;

            @media only screen and (max-width: 1200px) {
                width: 80%;
            }

            @media only screen and (max-width: 992px) {
                width: 100%;
                margin: 1em auto;
                text-align: center;
            }

            @media only screen and (max-width: 768px) {
                font-size: 20px;
            }

            &::before {
                content:'';
                display: block;
                position: absolute;
                top: -1em;
                left: 0;
                height: 2px;
                width: 50px;
                background: #fff;
                @media only screen and (max-width: 992px) {
                    left: calc(50% - 25px);
                }
            }
        }
    }

    .faq {
        padding: 50px;

        @media only screen and (max-width: 768px) {
            padding: 50px 25px;
        }

        &__heading {
            font-size: 24px;
            font-weight: bold;
            color: #111;
            margin: 0 0 2em;

            @media only screen and (max-width: 768px) {
                font-size: 20px;
            }
        }

        &__list {
            padding: 0;
            border-top: 1px solid #d7d7d7;
        }

        &__list-item {
            cursor: pointer;
            display: block;
            padding: 25px 0 25px 18px;
            list-style-position: inside;
            border-bottom: 1px solid #d7d7d7;
            
            &--show {
                .faq__content-wrapper {
                    display: block;
                    max-height: 99em;
                    transition: max-height 0.5s ease-in-out; 
                    -webkit-transition: max-height 0.5s ease-in-out;
                }

                .faq__title {
                    &::after {
                        transform: rotate(180deg);
                    }
                }
            }
        }

        &__title {
            display: list-item;
            list-style-position: outside;
            position: relative;
            margin: 0;
            color: #111;
            font-size: 16px;
            font-weight: bold;
            padding-right: 15%;

            &::after {
                content:'';
                background-image: url('../images/arrow-drop-down.svg');
                background-repeat: no-repeat;
                background-size: contain;
                position: absolute;
                right: 0px;
                top: calc(50% - 15px);
                display: block;
                width: 30px;
                height: 30px;
                z-index: 100;
                transition: transform 0.3s ease;
                -webkit-transition: transform 0.3s ease;
            }
        }

        &__content-wrapper {
            margin-left: -18px;
            width: 90%;
            display: block;
            overflow: hidden;
            max-height: 0;
            transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
            -webkit-transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);

            @media only screen and (max-width: 992px) {
                width: 100%;
            }
        }

        &__content {
            color: #555;
            line-height: 2;
            font-size: 16px;
            padding: 25px 0 50px;
        }
    }
}

